--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         
         <div class="bg-green-50 border border-green-200 rounded-lg p-5 mb-6">
             <p class="text-gray-800 mb-4 text-[clamp(1rem,2vw,1.1rem)] leading-relaxed">
-                您好！感谢您的关注，现在拍下商品并添加微信，我们将返还<span class="text-primary font-bold">2元现金</span>优惠！
+                你好老板很高兴认识你，加我绿泡泡送<span class="text-primary font-bold">抢单秘籍</span>!截屏保存到相册扫一扫即可找到我!
             </p>
             <div class="flex items-center bg-white rounded-md p-3 border border-gray-200 mb-4">
                 <i class="fa fa-weixin text-primary text-2xl mr-3"></i>
